--- a/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
+++ b/Source/Mosa.Platform.ARMv8A32/Mosa.Platform.ARMv8A32.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ARMHelper.cs" />
     <Compile Include="GeneralPurposeRegister.cs" />
     <Compile Include="Instructions\Abs.cs" />
+    <Compile Include="Instructions\AbsImm.cs" />
     <Compile Include="Instructions\Adc.cs" />
     <Compile Include="Instructions\AdcImm.cs" />
     <Compile Include="Instructions\AdcImmShift.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="Instructions\AddImmShift.cs" />
     <Compile Include="Instructions\AddRegShift.cs" />
     <Compile Include="Instructions\Adf.cs" />
+    <Compile Include="Instructions\AdfImm.cs" />
     <Compile Include="Instructions\And.cs" />
     <Compile Include="Instructions\AndImm.cs" />
     <Compile Include="Instructions\AndImmShift.cs" />
@@ -128,16 +130,22 @@
     <Compile Include="Instructions\Dmb.cs" />
     <Compile Include="Instructions\Dsb.cs" />
     <Compile Include="Instructions\Dvf.cs" />
+    <Compile Include="Instructions\DvfImm.cs" />
     <Compile Include="Instructions\Dvr.cs" />
+    <Compile Include="Instructions\DvrImm.cs" />
     <Compile Include="Instructions\Eor.cs" />
     <Compile Include="Instructions\EorImm.cs" />
     <Compile Include="Instructions\EorImmShift.cs" />
     <Compile Include="Instructions\EorRegShift.cs" />
     <Compile Include="Instructions\Fdv.cs" />
+    <Compile Include="Instructions\FdvImm.cs" />
     <Compile Include="Instructions\Fix.cs" />
     <Compile Include="Instructions\Flt.cs" />
+    <Compile Include="Instructions\FltImm.cs" />
     <Compile Include="Instructions\Fml.cs" />
+    <Compile Include="Instructions\FmlImm.cs" />
     <Compile Include="Instructions\Frd.cs" />
+    <Compile Include="Instructions\FrdImm.cs" />
     <Compile Include="Instructions\Isb.cs" />
     <Compile Include="Instructions\LdfDown.cs" />
     <Compile Include="Instructions\LdfDownOffset.cs" />
@@ -173,6 +181,7 @@
     <Compile Include="Instructions\Mla.cs" />
     <Compile Include="Instructions\Mlal.cs" />
     <Compile Include="Instructions\Mnf.cs" />
+    <Compile Include="Instructions\MnfImm.cs" />
     <Compile Include="Instructions\Mov.cs" />
     <Compile Include="Instructions\MovImm.cs" />
     <Compile Include="Instructions\MovImmShift.cs" />
@@ -182,9 +191,11 @@
     <Compile Include="Instructions\Mrs.cs" />
     <Compile Include="Instructions\Msr.cs" />
     <Compile Include="Instructions\Muf.cs" />
+    <Compile Include="Instructions\MufImm.cs" />
     <Compile Include="Instructions\Mul.cs" />
     <Compile Include="Instructions\Mull.cs" />
     <Compile Include="Instructions\Mvf.cs" />
+    <Compile Include="Instructions\MvfImm.cs" />
     <Compile Include="Instructions\Mvn.cs" />
     <Compile Include="Instructions\MvnImm.cs" />
     <Compile Include="Instructions\MvnImmShift.cs" />
@@ -202,7 +213,9 @@
     <Compile Include="Instructions\Rfc.cs" />
     <Compile Include="Instructions\Rfs.cs" />
     <Compile Include="Instructions\Rmf.cs" />
+    <Compile Include="Instructions\RmfImm.cs" />
     <Compile Include="Instructions\Rnd.cs" />
+    <Compile Include="Instructions\RndImm.cs" />
     <Compile Include="Instructions\Ror.cs" />
     <Compile Include="Instructions\RorImm.cs" />
     <Compile Include="Instructions\Rsb.cs" />
@@ -214,12 +227,14 @@
     <Compile Include="Instructions\RscImmShift.cs" />
     <Compile Include="Instructions\RscRegShift.cs" />
     <Compile Include="Instructions\Rsf.cs" />
+    <Compile Include="Instructions\RsfImm.cs" />
     <Compile Include="Instructions\Sbc.cs" />
     <Compile Include="Instructions\SbcImm.cs" />
     <Compile Include="Instructions\SbcImmShift.cs" />
     <Compile Include="Instructions\SbcRegShift.cs" />
     <Compile Include="Instructions\Sev.cs" />
     <Compile Include="Instructions\Sqt.cs" />
+    <Compile Include="Instructions\SqtImm.cs" />
     <Compile Include="Instructions\StfDown.cs" />
     <Compile Include="Instructions\StfDownOffset.cs" />
     <Compile Include="Instructions\StfUp.cs" />
@@ -252,6 +267,7 @@
     <Compile Include="Instructions\SubImmShift.cs" />
     <Compile Include="Instructions\SubRegShift.cs" />
     <Compile Include="Instructions\Suf.cs" />
+    <Compile Include="Instructions\SufImm.cs" />
     <Compile Include="Instructions\Svc.cs" />
     <Compile Include="Instructions\Swi.cs" />
     <Compile Include="Instructions\Sxtb.cs" />
