--- a/Source/Mosa.Runtime.ARMv8A32/Mosa.Runtime.ARMv8A32.csproj
+++ b/Source/Mosa.Runtime.ARMv8A32/Mosa.Runtime.ARMv8A32.csproj
@@ -68,6 +68,7 @@
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Math\FloatingPoint.cs" />
     <Compile Include="Native.cs" />
     <Compile Include="Internal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
