--- a/Source/Mosa.Utility.SourceCodeGenerator/Mosa.Utility.SourceCodeGenerator.csproj
+++ b/Source/Mosa.Utility.SourceCodeGenerator/Mosa.Utility.SourceCodeGenerator.csproj
@@ -66,6 +66,8 @@
     <Compile Include="BuildIRInstructions.cs" />
     <Compile Include="BuildBaseTemplate.cs" />
     <Compile Include="DynamicJsonConverter.cs" />
+    <Compile Include="Expression\LabelPosition.cs" />
+    <Compile Include="Expression\ExpressionMethodFilter.cs" />
     <Compile Include="Expression\ExpressionLabel.cs" />
     <Compile Include="Expression\ExpressionLabels.cs" />
     <Compile Include="Expression\ExpressionOperand.cs" />
