--- a/Source/Mosa.Utility.Launcher/Mosa.Utility.Launcher.csproj
+++ b/Source/Mosa.Utility.Launcher/Mosa.Utility.Launcher.csproj
@@ -65,12 +65,6 @@
     </ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CommandLine, Version=2.5.0.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
-      <HintPath>..\packages\CommandLineParser.2.5.0\lib\net461\CommandLine.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpDisasm, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SharpDisasm.1.1.11\lib\net45\SharpDisasm.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
@@ -208,7 +202,12 @@
     <EmbeddedResource Include="Resources\grub\2.00\grub.cfg" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <PackageReference Include="CommandLineParser">
+      <Version>2.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="SharpDisasm">
+      <Version>1.1.11</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
