--- a/Source/Mosa.Compiler.Extension.Dwarf/Mosa.Compiler.Extension.Dwarf.csproj
+++ b/Source/Mosa.Compiler.Extension.Dwarf/Mosa.Compiler.Extension.Dwarf.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>..\..\bin</OutputPath>
-    <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>..\..\bin</OutputPath>
